--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>CV Ariq Daffa</title>
-
+  </head>
+  <body>
     <!---Navbar--->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light shadow-sm" style="background-color: bisque">
       <div class="container">
@@ -34,6 +35,12 @@
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact Me</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="form.html">Registrasi</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="formlogin.html">Login</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -53,7 +60,6 @@
       </svg>
     </section>
     <!-- Akhir Jumbotron-->
-
     <!--About-->
     <section id="about">
       <div class="container">
@@ -149,8 +155,6 @@
       <p>Created By <a href="https://www.instagram.com/ariqqdf_/" class="text-dark fw-bold">Ariq Daffa</a></p>
     </footer>
     <!-- Akhir Footer -->
-  </head>
-  <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
