--- a/hasil.html
+++ b/hasil.html
@@ -1,1 +1,9 @@
-<a href="index.html">Kembali ke halaman Utama</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>HASIL</title>
+  </head>
+  <body>
+    <a href="index.html">Kembali ke halaman Utama</a>
+  </body>
+</html>
