--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5">
-          <div class="col-4">
+          <div class="col-md-4">
             Nama lengkap saya Muhammad Ariq Daffa, lahir pada tanggal 30 Januari Tahun 2003, dan saya biasa dipanggil Ariq. Sekarang saya berusia 18 tahun dan sedang mengeyam pendidikan di Universitas Jenderal Soedirman Teknik Informatika
             Semester 3.
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             Saya tinggal di Kota Tangerang. Tepatnya di Taman Royal 3 Cluster Ebony, Kota Tangerang, Banten. Saya memiliki ketertarikan terhadap dunia programming Web dan Pembuatan game. Namun, saat ini saya belum pernah membuat project
             pembuatan game.
           </div>
@@ -97,20 +97,20 @@
           </div>
         </div>
         <div class="row justify-content-center fs-3">
-          <div class="col-4">2008-2014 :</div>
-          <div class="col-4">SDN 6 Tangerang</div>
+          <div class="col-md-4">2008-2014 :</div>
+          <div class="col-md-4">SDN 6 Tangerang</div>
         </div>
         <div class="row justify-content-center fs-3">
-          <div class="col-4">2014-2017 :</div>
-          <div class="col-4">SMPN 1 Tangerang</div>
+          <div class="col-md-4">2014-2017 :</div>
+          <div class="col-md-4">SMPN 1 Tangerang</div>
         </div>
         <div class="row justify-content-center fs-3">
-          <div class="col-4">2017-2020 :</div>
-          <div class="col-4">SMAN 1 Tangerang</div>
+          <div class="col-md-4">2017-2020 :</div>
+          <div class="col-md-4">SMAN 1 Tangerang</div>
         </div>
         <div class="row justify-content-center fs-3">
-          <div class="col-4">2020 - Sekarang :</div>
-          <div class="col-4">Universitas Jenderal Soedirman</div>
+          <div class="col-md-4">2020 - Sekarang :</div>
+          <div class="col-md-4">Universitas Jenderal Soedirman</div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
