--- a/formlogin.html
+++ b/formlogin.html
@@ -25,15 +25,15 @@
     <!-- Akhir Jumbotron-->
   </head>
   <body onload="focus_email()">
-    <div class="container">
+    <div class="container mb-3">
       <h4 class="text-center">Form Login</h4>
       <hr />
       <form method="post" action="hasil.html" onsubmit="return cek_pass();">
-        <div class="form-group">
+        <div class="mb-3">
           <input id="email" type="email" class="form-control" placeholder="Email" />
           <br />
         </div>
-        <div class="form-group">
+        <div class="mb-3">
           <input id="password" type="password" class="form-control" placeholder="Password" />
           <br />
         </div>
